Pointed "Demos" in README to /demos

--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name: Namespace
 author: ericclemmons
-category: Utility
+category: Utilities
 tags: [namespace, depender, dependency]
 #docs: http://url.to.docs
 #demo: http://url.to.demo
